--- a/hw02/index.html
+++ b/hw02/index.html
@@ -7,7 +7,8 @@
       <canvas height="500" width="500" id="playground" style="border:1px solid #000000;">
 
       </canvas>
-      <button type="button" id="clear">Clear</button>
+      <button type="button" id="clear">Animate</button>
+      <button type="button" id="stop">Stop</button>
 
     </body>
 
