--- a/hw03/oldIndex.html
+++ b/hw03/oldIndex.html
@@ -7,8 +7,8 @@
       <canvas height="500" width="500" id="playground" style="border:1px solid #000000;">
 
       </canvas>
-      <button type="button" id="circle">Animate</button>
-      <button type="button" id="dvd">DVD</button>
+      <button type="button" id="clear">Animate</button>
+      <button type="button" id="disc">DVD</button>
       <button type="button" id="stop">Stop</button>
     </body>
 
