--- a/hw04/index.html
+++ b/hw04/index.html
@@ -4,6 +4,9 @@
   <body>
     <svg id = "vimage" height = "500" width="500" style ="border: 1px solid;">
     </svg>
+    <button id="circle">Grow</button>
+    <button id="dvd">DVD</button>
+    <button id="stop">Stop</button>
   </body>
   <script src = "svg.js"> </script>
 
