--- a/bar/bar.html
+++ b/bar/bar.html
@@ -9,6 +9,7 @@
   margin: 1px;
   color: white;
   }
+
 </style>
 
 
@@ -16,6 +17,24 @@
 
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
+  <script>
+
+var data = [4,8,15,16,23,42]
+
+var foo = d3.scale.linear()
+  .domain([0,d3.max(data)])
+  .range([0,420]);
+
+
+d3.select(".chart")
+  .selectAll("div") 
+    .data(data)
+  .enter().append("div")
+    .style("width", function(d) {
+        return foo(d) + "px";})
+  .text(function(d){ return d; });
+
+  </script>
 </div>
 
 </html>
@@ -29,7 +48,6 @@
   Use data to drive the state
 
 
-
   var data = [4,8,15,16,23,42]
   var chart = d3.select(".chart")
   var bar = chart.selectAll("div")
@@ -39,6 +57,35 @@
   barEnter.text(function(d) {return d; });
 
 
+make hw05 repo
+serpeate js, farm out to seperate css
+
+index.html, index.js, css/style.css
+
+
+
+each . returns an object
+
+var data = [4,8,15,16,23,42]
+
+2 space means no change in selection,
+4 space means yes?
+2 space indent for unchanged selection
+4 -space for modified selection
+
+d3.select(".chart")
+  .selectAll("div") 
+    .data(data)
+  .enter().append("div")
+    .style("width", function(d) {
+        return foo(d) + "px";})
+  .text(function(d){ return d; });
+
+
+
+var foo = d3.scale.linear()
+  .domain([0,d3.max(data)])
+  .range([0,420]);
 
 
 -->
